2_basics/seminar_dump.txt
Python 3.7.2 (tags/v3.7.2:9a3ffc0492, Dec 23 2018, 22:20:52) [MSC v.1916 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license()" for more information.
>>> hist
Traceback (most recent call last):
  File "<pyshell#0>", line 1, in <module>
    hist
NameError: name 'hist' is not defined
>>> %hist
SyntaxError: invalid syntax
>>> %%hist
SyntaxError: invalid syntax
>>> history()
Traceback (most recent call last):
  File "<pyshell#3>", line 1, in <module>
    history()
NameError: name 'history' is not defined
>>> age = input()
22
>>> type(age)
<class 'str'>
>>> if age > 22:
	print('aa')
	print('bb')
else:
	print('aaaaaaa')

	
Traceback (most recent call last):
  File "<pyshell#11>", line 1, in <module>
    if age > 22:
TypeError: '>' not supported between instances of 'str' and 'int'
>>> value = """
231321321341
string"""
>>> value
'\n231321321341\nstring'
>>> eval(value)
Traceback (most recent call last):
  File "<pyshell#16>", line 1, in <module>
    eval(value)
  File "<string>", line 3
    string
         ^
SyntaxError: unexpected EOF while parsing
>>> 
>>> 
>>> 
>>> 
>>> 
>>> 
>>> 
>>> a = [1, 2, 3, 4, 5]
>>> for i in a:
	print(2 ** i)

	
2
4
8
16
32
>>> for i in range(1, 10):
	print(i)

	
1
2
3
4
5
6
7
8
9
>>> for i in range(1, 10, 2):
	print(i)

	
1
3
5
7
9
>>> for i in range(1, 10, -1):
	print(i)

	
>>> for i in range(10, 1, -1):
	print(i)

	
10
9
8
7
6
5
4
3
2
>>> l = list(range(1, 100))
>>> l
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> print(list(range(100)))
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> l
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> l[0]
1
>>> l[1]
2
>>> l[10:20]
[11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
>>> l = list(range(100))
>>> l[10:20]
[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
>>> l[10:30:3]
[10, 13, 16, 19, 22, 25, 28]
>>> l[-1]
99
>>> len(l)
100
>>> l[10000]
Traceback (most recent call last):
  File "<pyshell#52>", line 1, in <module>
    l[10000]
IndexError: list index out of range
>>> l[-99]
1
>>> l[-100]
0
>>> l[-101]
Traceback (most recent call last):
  File "<pyshell#55>", line 1, in <module>
    l[-101]
IndexError: list index out of range
>>> l[5:-5]
[5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94]
>>> l[-5::30]
[95]
>>> l[-10::-30]
[90, 60, 30, 0]
>>> range_ = range(10)
>>> range_
range(0, 10)
>>> type(range_)
<class 'range'>
>>> range_[10]
Traceback (most recent call last):
  File "<pyshell#62>", line 1, in <module>
    range_[10]
IndexError: range object index out of range
>>> for i in range_:
	print(i)

	
0
1
2
3
4
5
6
7
8
9
>>> range_[2]
2
>>> x = 2 if 9 == 8 else '9'
>>> x
'9'
>>> type_of_variable = 2
>>> current_type = 'Var 1' if type_of_variable == 1 else 'Var 2' if type_of_variable == 2 else 'Unknown'
>>> x = ('732891302130821908390213890821908390210382190893082190')
>>> x = ('abc'
	 'def'
	 'hjj')
>>> x
'abcdefhjj'
>>> unsorted = [4,56,1,2,-1]
>>> unsorted.sort()
>>> unsorted
[-1, 1, 2, 4, 56]
>>> unsorted.sort(reverse=True)
>>> unsorted
[56, 4, 2, 1, -1]
>>> sorted(unsorted)
[-1, 1, 2, 4, 56]
>>> unsorted
[56, 4, 2, 1, -1]
>>> sorted(unsorted, reverse=True)
[56, 4, 2, 1, -1]
>>> max(unsorted)
56
>>> sum(unsorted)
62
>>> ['A', 'C', 'b', 'B']
['A', 'C', 'b', 'B']
>>> sorted(['A', 'C', 'b', 'B'])
['A', 'B', 'C', 'b']
>>> ['A', 'C', 'b', 'B'].sort()
>>> s = ['A', 'C', 'b', 'B'].sort()
>>> s
>>> 'a cat sees a dog'.split(' ')
['a', 'cat', 'sees', 'a', 'dog']
>>> splitted = 'a cat sees a dog'.split(' ')
>>> '.'.join(splitted)
'a.cat.sees.a.dog'
>>> ' ^_^ '.join(splitted)
'a ^_^ cat ^_^ sees ^_^ a ^_^ dog'
>>> 'a cat sees a dog'.split('se')
['a cat ', 'es a dog']
>>> l = list(range(10))
>>> l
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> l_sq = [i ** 2 for i in range(10)]
>>> l_sq
[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
>>> matrix = [[i * j for i in range(10)] for j in range(5)]
>>> matrix
[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 2, 4, 6, 8, 10, 12, 14, 16, 18], [0, 3, 6, 9, 12, 15, 18, 21, 24, 27], [0, 4, 8, 12, 16, 20, 24, 28, 32, 36]]
>>> print(matrix, sep='\n')
[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 2, 4, 6, 8, 10, 12, 14, 16, 18], [0, 3, 6, 9, 12, 15, 18, 21, 24, 27], [0, 4, 8, 12, 16, 20, 24, 28, 32, 36]]
>>> print(*matrix)
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0] [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] [0, 2, 4, 6, 8, 10, 12, 14, 16, 18] [0, 3, 6, 9, 12, 15, 18, 21, 24, 27] [0, 4, 8, 12, 16, 20, 24, 28, 32, 36]
>>> print(matrix)
[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 2, 4, 6, 8, 10, 12, 14, 16, 18], [0, 3, 6, 9, 12, 15, 18, 21, 24, 27], [0, 4, 8, 12, 16, 20, 24, 28, 32, 36]]
>>> print(*matrix, sep='\n')
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]
[0, 3, 6, 9, 12, 15, 18, 21, 24, 27]
[0, 4, 8, 12, 16, 20, 24, 28, 32, 36]
>>> matrix = [[i * j for i in range(10) if j != 3 else 'HELLO'] for j in range(5)]
SyntaxError: invalid syntax
>>> matrix = [[i * j for i in range(10) if j != 3] for j in range(5)]
>>> matrix
[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 2, 4, 6, 8, 10, 12, 14, 16, 18], [], [0, 4, 8, 12, 16, 20, 24, 28, 32, 36]]
>>> print(*matrix, sep='\n')
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]
[]
[0, 4, 8, 12, 16, 20, 24, 28, 32, 36]
>>> [i*j for i in range(5) for j in range(2)]
[0, 0, 0, 1, 0, 2, 0, 3, 0, 4]
>>> [','.join([str(i), str(j)]) for i in range(5) for j in range(2)]
['0,0', '0,1', '1,0', '1,1', '2,0', '2,1', '3,0', '3,1', '4,0', '4,1']
>>> for i in range(5):
	for j in range(2):
		print(','.join([str(i), str(j)]))

		
0,0
0,1
1,0
1,1
2,0
2,1
3,0
3,1
4,0
4,1
>>> d = {str(x) : x ** 2 for i in range(10)}
Traceback (most recent call last):
  File "<pyshell#116>", line 1, in <module>
    d = {str(x) : x ** 2 for i in range(10)}
  File "<pyshell#116>", line 1, in <dictcomp>
    d = {str(x) : x ** 2 for i in range(10)}
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
>>> d = {str(x) : x ** 2 for x in range(10)}
>>> d
{'0': 0, '1': 1, '2': 4, '3': 9, '4': 16, '5': 25, '6': 36, '7': 49, '8': 64, '9': 81}
>>> print(d)
{'0': 0, '1': 1, '2': 4, '3': 9, '4': 16, '5': 25, '6': 36, '7': 49, '8': 64, '9': 81}
>>> import pprint
>>> dir(pprint)
['PrettyPrinter', '_StringIO', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', '_builtin_scalars', '_collections', '_perfcheck', '_recursion', '_safe_key', '_safe_repr', '_safe_tuple', '_sys', '_types', '_wrap_bytes_repr', 'isreadable', 'isrecursive', 'pformat', 'pprint', 're', 'saferepr']
>>> pp = PrettyPrinter()
Traceback (most recent call last):
  File "<pyshell#122>", line 1, in <module>
    pp = PrettyPrinter()
NameError: name 'PrettyPrinter' is not defined
>>> pp = pprint.PrettyPrinter()
>>> pp
<pprint.PrettyPrinter object at 0x02F97FB0>
>>> pp.pprint(d)
{'0': 0,
 '1': 1,
 '2': 4,
 '3': 9,
 '4': 16,
 '5': 25,
 '6': 36,
 '7': 49,
 '8': 64,
 '9': 81}
>>> for i in d:
	print(i)

	
0
1
2
3
4
5
6
7
8
9
>>> for i in d:
	print(i, d[i])

	
0 0
1 1
2 4
3 9
4 16
5 25
6 36
7 49
8 64
9 81
>>> for i in d.values():
	print(i)

	
0
1
4
9
16
25
36
49
64
81
>>> for key, value in d.items():
	print(key, value)

	
0 0
1 1
2 4
3 9
4 16
5 25
6 36
7 49
8 64
9 81
>>> Traceback (most recent call last):
  File "<pyshell#138>", line 1, in <module>
    [x ** 1000 for x in range(10000)]
KeyboardInterrupt
[x ** 1000 for x in range(1000
>>> 
			  
>>> 
			  
>>> 





